# Vibe-Trading

./: .gitignore
auto_trader/: FORK_NOTICE.md  LICENSE  README.md  pyproject.toml
auto_trader/config/: README.md  execution.yaml  observability.yaml  risk.yaml  signal_ingestion.yaml
auto_trader/execution/: README.md  __init__.py  config.py  events.py  ports.py  sink.py
auto_trader/observability/: README.md  __init__.py  alert_router.py  audit_log.py  config.py  health.py  pnl.py  ports.py
auto_trader/reconciliation/: README.md  __init__.py  broker_book.py  events.py  ports.py  position_reader.py  processor.py
auto_trader/reservation_bridge/: __init__.py  bridge.py
auto_trader/risk/: README.md  __init__.py  _serialize.py  config.py  decision.py  engine.py  events.py  gate.py  ports.py  types.py
auto_trader/scripts/: demo.py  run_server.py
auto_trader/signals/: README.md  __init__.py  auth.py  config.py  dedupe.py  ports.py  registry_stub.py  router.py  types.py
auto_trader/static/: app.js  dashboard.html  settings.html  style.css
auto_trader/strategies/: README.md  __init__.py  book.py  host.py  ports.py  registry.py  types.py
auto_trader/tests/: test_capital_reserver.py  test_config.py  test_daily_pnl.py  test_decision.py  test_engine.py  test_events.py  test_execution.py  test_frozen_clock.py  test_gate.py  test_integration.py  test_observability.py  test_ports.py  test_reconciliation.py  test_reservation_bridge.py  test_reservation_ledger.py  test_rule_idempotency.py  test_rule_system_state.py  test_rules_impl.py  test_signal_config.py  test_signal_dedupe.py  test_signal_integration.py  test_signal_manual_cli.py  test_signal_ports.py  test_signal_registry_stub.py  test_signal_router.py  test_signal_stubs.py  test_signal_tradingview.py  test_signal_types.py  test_state_integration.py  test_state_machine.py  test_strategies_book.py  test_strategies_host.py  test_strategies_registry.py  (+2 more)
(+92 files in other folders)
