[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-trader"
version = "0.0.1"
description = "Auto-trading subsystem for HKUDS/Vibe-Trading fork (signal ingestion + risk gate + order execution + reconciliation + observability)"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "chaokenyuan"}]
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
# auto_trader/ 為專案根；7 個 capability 為頂層 package
include = [
    "risk*", "signals*", "strategies*", "execution*",
    "reconciliation*", "observability*", "reservation_bridge*",
]
exclude = ["tests*", "config*", "docs*", "openspec*", "static*", "scripts*"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "RUF",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
